<resources>
    <string name="app_name">FirebaseTestLab</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
</resources>
